# makeitpop

./: README.md  demo.ipynb  environment.yml  pyproject.toml  requirements.txt  setup.py
makeitpop/: __init__.py  derivatives.py  makeitpop.py
