[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "makeitpop"
author = "Chris Holdgraf"
author-email = "choldgraf@berkeley.edu"
home-page = "https://github.com/choldgraf/makeitpop"
classifiers = ["License :: OSI Approved :: MIT License"]

